# panduck

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/panduck/: cli.py
src/panduck/data/csl/: acm-sigchi-proceedings.csl
src/panduck/data/defaults/: beamer.yaml  dcc-informe.yaml  default.yaml  elsevier.yaml  instagram.yaml  lapreprint.yaml  paper.yaml  slides.yaml  springer.yaml  tufte-book.yaml  tufte.yaml
src/panduck/data/examples/dcc-informe/: Makefile  main.md  prompts.toml  references.bib  sandwich.dot
src/panduck/data/examples/instagram/: head.yaml  main.md  prompts.toml
src/panduck/data/examples/lapreprint/: Makefile  head.yaml  main.md  prompts.toml
src/panduck/data/examples/paper/: Makefile  head.yaml  main.md  prompts.toml
src/panduck/data/examples/slides/: Makefile  head.yaml  main.md  prompts.toml  references.bib
src/panduck/data/examples/springer/: Makefile  head.yaml  main.md  prompts.toml
src/panduck/data/filters/: fonts-and-alignment.lua  insert-declarations-before-refs.lua  insert-funding-before-refs.lua  instagram-posts.lua  lapreprint-meta.lua  panduck-pre.lua  per-chapter-refs.lua  process-affiliations.lua  sectionbreak.lua  strip-header-includes.lua  tufte-book.lua  tufte.lua  typst-fix-symbols.lua  typst-flatten-cites.lua  typst-slides.lua
src/panduck/data/reference/: paper-reference.docx
src/panduck/data/templates/: cover-letter.md  dcc-informe.latex  elsevier.latex  highlights.md  instagram.typst  lapreprint.latex  slides.typst  springer.latex  titlepage.md  tufte-book.typst  tufte.typst
(+10 files in other folders)
